# GravadorDeReunioes

./: .gitignore  Cargo.toml  README.md  build.rs  build_cuda.bat  cmake-toolchain.cmake  installer.iss
.cargo/: config.toml
.claude/: launch.json  settings.local.json
.github/workflows/: build-installer.yml
src/: config.rs  db.rs  main.rs  ui_bridge.rs
src/audio/: capture.rs  mixer.rs  mod.rs  wav_writer.rs
src/transcription/: cloud.rs  local.rs  mod.rs  model_downloader.rs
ui/: history.slint  main.slint  recording.slint  settings.slint  style.slint  transcription.slint  updater.slint
updater/: Cargo.toml  build.rs
updater/src/: main.rs
