[package]
name = "gravador-de-reunioes"
version = "0.1.0"
edition = "2021"
description = "Gravador de reunioes com transcricao automatica"

[dependencies]
slint = "1"
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.16"
async-openai = "0.27"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
dirs = "6"
ringbuf = "0.4"
rubato = "0.16"
num_cpus = "1"
arboard = "3"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[build-dependencies]
slint-build = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
