[workspace]
resolver = "2"
members = [
    ".",
    "updater",
]

[package]
name = "gravador-de-reunioes"
version = "1.0.3"
edition = "2021"
description = "Gravador de reunioes com transcricao automatica"

[dependencies]
slint = "1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
cpal = "0.15"
hound = "3.5"
rodio = "0.19"
whisper-rs = { version = "0.16", features = ["cuda"] }
async-openai = "0.27"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
dirs = "6"
ringbuf = "0.4"
num_cpus = "1"
arboard = "3"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures-util = "0.3"
winrt-notification = "0.5"
rfd = "0.15"

[build-dependencies]
slint-build = "1"
winres = "0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
